# StarWAM

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/accelerate/: deepspeed_zero2.yaml  deepspeed_zero2_multinode.yaml
configs/deepspeed/: zero2.json
examples/: __init__.py
examples/libero/: LIBERO.md  __init__.py  presets.py  requirements.txt  rollout.py  summarize_results.py
examples/libero/scripts/: launch_starwam_libero_feature_conditioned_wan22_5b_8gpu.sh  launch_starwam_libero_mot_rollout.sh  launch_starwam_libero_mot_wan22_5b_8gpu.sh  launch_starwam_libero_shared_dit_cosmos_predict2_8gpu.sh  launch_starwam_libero_shared_dit_wan22_5b_8gpu.sh
examples/robotwin/: RoboTwin.md  client_policy.py  deploy_policy.py  deploy_policy.yml  deploy_policy_client.yml  local_policy.py  policy_server.py
starwam/: __init__.py  builder.py  config.py  taxonomy.py
starwam/action_model/: __init__.py  action_dit.py
starwam/backbone/: __init__.py  base.py  cosmos_predict2.py  wan22.py
starwam/data/: __init__.py  lerobot.py
starwam/eval/: __init__.py  policy.py
starwam/modules/: __init__.py  action_dit.py  causal_cosmos.py  causal_wan.py  mot.py  scheduler.py  shared_dit_components.py  wan_block.py
starwam/tools/: __init__.py  precompute_text_cache.py  preprocess_action_dit_init.py
starwam/training/: __init__.py  flow.py  loss.py  metrics.py  train.py  trainer.py
starwam/utils/: __init__.py  checkpoint.py  config_cli.py
starwam/wam/: __init__.py  base.py  feature_conditioned_action_model.py  mot_wam.py  shared_dit_wam.py
(+10 files in other folders)
